--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -156,6 +156,25 @@ button {
   </script>
 </head>
 <body>
+  <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+    <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+      <span class="countdown font-mono text-5xl">
+        <span id="hours" style="--value:<%= Math.floor((originalMaxAge % (60 * 60 * 24)) / (60 * 60)) %>;"></span>
+      </span>
+      hours
+    </div>
+    <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+      <span class="countdown font-mono text-5xl">
+        <span id="minutes" style="--value:<%= Math.floor((originalMaxAge % (60 * 60)) / 60) %>;"></span>
+      </span>
+      min
+    </div>
+    <div class="flex flex-col p-2 bg-neutral rounded-box text-neutral-content">
+      <span class="countdown font-mono text-5xl">
+        <span id="seconds" style="--value:<%= originalMaxAge % 60 %>;"></span>
+      </span>
+      sec
+    </div>
   <h1>Select Seat <%=scheduleId%></h1>
 
   <ul>
@@ -196,3 +215,33 @@ button {
     </div>
 </body>
 </html>
+
+<script>
+  function startCountdown() {
+    const hoursElement = document.getElementById('hours');
+    const minutesElement = document.getElementById('minutes');
+    const secondsElement = document.getElementById('seconds');
+  
+    let remainingTime = <%= originalMaxAge %>;
+  
+    function updateCountdown() {
+      const hours = Math.floor((remainingTime % (60 * 60 * 24)) / (60 * 60));
+      const minutes = Math.floor((remainingTime % (60 * 60)) / 60);
+      const seconds = remainingTime % 60;
+  
+      hoursElement.style.setProperty('--value', hours);
+      minutesElement.style.setProperty('--value', minutes);
+      secondsElement.style.setProperty('--value', seconds);
+  
+      remainingTime--;
+  
+      if (remainingTime >= 0) {
+        setTimeout(updateCountdown, 1000);
+      }
+    }
+  
+    updateCountdown();
+  }
+  
+  startCountdown();
+</script>
