--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -85,3 +85,15 @@ body{
 #movieDetailsPopup.show {
     opacity: 1;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 2rem;
+    border-radius: 0.5rem;
+    z-index: 9999;
+}
