--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -3,25 +3,6 @@
 
 <head>
   <title>Movie List</title>
-  <style>
-    .popup {
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 2rem;
-      background-color: white;
-      border-radius: 0.5rem;
-      z-index: 9999;
-    }
-  </style>
-  <script>
-    function showPopup() {
-      var popup = document.getElementById("popup");
-      popup.style.display = "block";
-    }
-  </script>
   <meta charset="UTF-8">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
@@ -30,61 +11,60 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-     <!-- Navbar -->
-     <nav class="p-10 bg-black text-cfab7a">
-      <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
-          <a href="#" class="text-3xl font-semibold">TixOnline</a>
-          <div class="text-[#cfab7a] mt-4 lg:mt-0">
-              <a href="/" class="px-4 hover:text-white">Home</a>
-              <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
-              <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
-              <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
-              <a href="/#about" class="px-4 hover:text-white smooth-scroll">About</a>
-          </div>
-          <div class="flex items-center mt-4 lg:mt-0">
-              <% if (session && session.username) { %>
-                  <a href="/profile" class="px-4 hover:text-white">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                          stroke="currentColor" class="w-6 h-6">
-                          <path stroke-linecap="round" stroke-linejoin="round"
-                              d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
-                      </svg>
-                  </a>
-                  <% } else { %>
-                      <button id="registerBtn" class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white"><a
-                              href="/register-account">Register</a></button>
-                      <button id="loginBtn" class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white"><a
-                              href="/login-account">Log in</a></button>
-                      <% } %>
-          </div>
+<body class="font-raleway">
+  <!-- Navbar -->
+  <nav class="p-10 bg-black text-cfab7a">
+    <div class="container flex flex-col items-center justify-between mx-auto lg:flex-row">
+      <a href="/" class="text-3xl font-semibold">TixOnline</a>
+      <div class="text-[#cfab7a] mt-4 lg:mt-0">
+        <a href="/" class="px-4 hover:text-white">Home</a>
+        <a href="/#nowplaying" class="px-4 hover:text-white smooth-scroll">Now Playing</a>
+        <a href="/#comingsoon" class="px-4 hover:text-white smooth-scroll">Coming Soon</a>
+        <a href="/theaters" class="px-4 hover:text-white">Theaters</a>
+        <a href="/#about" class="px-4 hover:text-white smooth-scroll">About</a>
       </div>
+      <div class="flex items-center mt-4 lg:mt-0">
+        <% if (session && session.username) { %>
+          <a href="/profile" class="px-4 hover:text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-6 h-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M15.75 6a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.501 20.118a7.5 7.5 0 0114.998 0A17.933 17.933 0 0112 21.75c-2.676 0-5.216-.584-7.499-1.632z" />
+            </svg>
+          </a>
+          <% } else { %>
+            <button id="registerBtn" class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white"><a
+                href="/register-account">Register</a></button>
+            <button id="loginBtn" class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white"><a
+                href="/login-account">Log in</a></button>
+            <% } %>
+      </div>
+    </div>
   </nav>
-      <!--Filter-->
-      <section id="filter" class="bg-black py-16 text-[#cfab7a] ">
-        <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET">
-          <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
-            <% cities.forEach((city)=> { %>
-              <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
-              </option>
-              <% }) %>
-          </select>
-          <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
-            <% dateSelector.forEach((date)=> { %>
-              <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
-              </option>
-              <% }) %>
-          </select>
-        </form>
-      </section>
-    
+
   <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
     <div class="container mx-auto">
+      <h1 class="mb-4 text-4xl font-semibold">Now Playing</h1>
+      <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET">
+        <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
+          <% cities.forEach((city)=> { %>
+            <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
+            </option>
+            <% }) %>
+        </select>
+        <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
+          <% dateSelector.forEach((date)=> { %>
+            <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
+            </option>
+            <% }) %>
+        </select>
+      </form>
       <div class="kodfun-galeri">
         <% movies.forEach(movie=> { %>
           <div style="background-image: url('/images/<%= movie.images %>');">
             <div class="overlay">
-              <a href="/schedules-movie/<%= movie.movie_id %>?selectedCity=<%=cityFilter%>&selectedDate=<%=dateFilter%>" class="font-semibold ">
+              <a href="/schedules-movie/<%= movie.movie_id %>?selectedCity=<%=cityFilter%>&selectedDate=<%=dateFilter%>"
+                class="font-semibold ">
                 <%= movie.title %>
               </a>
             </div>
@@ -93,7 +73,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="movieDetail" class="bg-black py-16 text-[#cfab7a] ">
     <h1 class="flex justify-center mb-16 text-4xl font-semibold">
       <%= movie.title %>
@@ -106,103 +86,75 @@
         allowfullscreen></iframe>
     </div>
   </section>
-  
 
-  <%  const today = new Date(); 
-  today.setHours(today.getHours() + 0); 
-  today.setDate(today.getDate()+0);
-  const now = new Date();
-  now.setUTCHours(now.getUTCHours() + 7);
-  
-  const hours = String(now.getUTCHours()).padStart(2, '0');
-  const minutes = String(now.getUTCMinutes()).padStart(2, '0');
-  
-  const timeString = hours + ':' + minutes;
-  console.log(timeString);
-  
-  
-  %>
+  <% const today=new Date(); today.setHours(today.getHours() + 0); today.setDate(today.getDate()+0); const now=new
+    Date(); now.setUTCHours(now.getUTCHours() + 7); const hours=String(now.getUTCHours()).padStart(2, '0' ); const
+    minutes=String(now.getUTCMinutes()).padStart(2, '0' ); const timeString=hours + ':' + minutes;
+    console.log(timeString); %>
 
-  <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
-    <% if (schedules !=null ) { %>
-      <% if (schedules.length> 0) { %>
-        <h3>Schedules:</h3>
-        <% let scheduleByLocation={}; %>
-          <% schedules.forEach(schedule=> {
-            if (!scheduleByLocation[schedule.name]) {
-            scheduleByLocation[schedule.name] = [];
-            }
-            scheduleByLocation[schedule.name].push(schedule);
-            }); %>
-            <% Object.keys(scheduleByLocation).forEach(name=> { %>
-              <h2>
-                <%= name %>
-              </h2>
-              <ul>
-            
-                <% scheduleByLocation[name].forEach(schedule=> { %>
-
-                  <%if((timeString > schedule.hours) && (today.toLocaleDateString('en-GB') >= schedule.date.toLocaleDateString('en-GB'))           ){%>
-                    
-                    <% if(session !=null) {%>
-                      <a href="/seat/<%= schedule.schedule_id %>"
-                        class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600 pointer-events-none">
-                        <%= schedule.hours %>
-                          <%= schedule.type %>
-                      </a>
-                      <% }else{ %>
-                        <a onclick="showPopup()"
-                          class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600 pointer-events-none">
-                          <%= schedule.hours %>
-                            <%= schedule.type %>
-                        </a>
-                        <% }%>
-             
-                          
-                    <%}else{%>
-
+    <section id="schedule" class="text-left bg-black py-16 text-[#cfab7a] ">
+      <% if (schedules !=null ) { %>
+        <% if (schedules.length> 0) { %>
+          <% let scheduleByLocation={}; %>
+            <% schedules.forEach(schedule=> {
+              if (!scheduleByLocation[schedule.name]) {
+              scheduleByLocation[schedule.name] = [];
+              }
+              scheduleByLocation[schedule.name].push(schedule);
+              }); %>
+              <% Object.keys(scheduleByLocation).forEach(name=> { %>
+                <h2>
+                  <%= name %>
+                </h2>
+                <ul>
+                  <% scheduleByLocation[name].forEach(schedule=> { %>
+                    <%if((timeString> schedule.hours) && (today.toLocaleDateString('en-GB') >=
+                      schedule.date.toLocaleDateString('en-GB')) ){%>
                       <% if(session !=null) {%>
                         <a href="/seat/<%= schedule.schedule_id %>"
-                          class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                          class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded pointer-events-none hover:bg-blue-600">
                           <%= schedule.hours %>
                             <%= schedule.type %>
                         </a>
                         <% }else{ %>
                           <a onclick="showPopup()"
-                            class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                            class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded pointer-events-none hover:bg-blue-600">
                             <%= schedule.hours %>
                               <%= schedule.type %>
                           </a>
                           <% }%>
-                            
-             
-                            
-                      <%} %>
-                 
-                      <% }); %>
-
-              </ul>
-              <% }); %>
-                <% } else { %>
-                  <p>No schedules available for this movie.</p>
-                  <% } %>
+                            <%}else{%>
+                              <% if(session !=null) {%>
+                                <a href="/seat/<%= schedule.schedule_id %>"
+                                  class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                                  <%= schedule.hours %>
+                                    <%= schedule.type %>
+                                </a>
+                                <% }else{ %>
+                                  <a onclick="showPopup()"
+                                    class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
+                                    <%= schedule.hours %>
+                                      <%= schedule.type %>
+                                  </a>
+                                  <% }%>
+                                    <%} %>
+                                      <% }); %>
+                </ul>
+                <% }); %>
+                  <% } else { %>
+                    <p>No schedules available for this movie.</p>
                     <% } %>
-  </section>
+                      <% } %>
+    </section>
 
-  <div id="popup" class="popup">
-    <h2>This is a pop-up!</h2>
-    <p>Please login first to buy ticket</p>
-    <button onclick="hidePopup()"
-      class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
-  </div>
+    <div id="popup" class="popup">
+      <h2>This is a pop-up!</h2>
+      <p>Please login first to buy ticket</p>
+      <button onclick="hidePopup()"
+        class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
+    </div>
 
-  <script>
-    function hidePopup() {
-      var popup = document.getElementById("popup");
-      popup.style.display = "none";
-    }
-  </script>
-
+    <script src="/script/script.js" defer></script>
 </body>
 
 </html>
