--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -33,9 +33,11 @@
             </svg>
           </a>
           <% } else { %>
-            <button id="registerBtn" class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white"><a
+            <button id="registerBtn"
+              class="w-auto px-3 py-1 mr-2 text-black rounded custom-btn hover:text-white hover:custom-btn"><a
                 href="/register-account">Register</a></button>
-            <button id="loginBtn" class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white"><a
+            <button id="loginBtn"
+              class="w-auto px-3 py-1 text-black rounded custom-btn hover:text-white hover:custom-btn"><a
                 href="/login-account">Log in</a></button>
             <% } %>
       </div>
@@ -45,14 +47,16 @@
   <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold">Now Playing</h1>
-      <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET">
-        <select id="selectedCity" name="selectedCity" onchange="this.form.submit();">
+      <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET" class="mb-4">
+        <select id="selectedCity" name="selectedCity" class="px-4 py-2 mr-4 bg-black border-2 rounded border-cfab7a"
+          onchange="this.form.submit();">
           <% cities.forEach((city)=> { %>
             <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
             </option>
             <% }) %>
         </select>
-        <select id="selectedDate" name="selectedDate" onchange="this.form.submit();">
+        <select id="selectedDate" name="selectedDate" class="px-4 py-2 bg-black border-2 rounded border-cfab7a"
+          onchange="this.form.submit();">
           <% dateSelector.forEach((date)=> { %>
             <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
             </option>
@@ -64,7 +68,7 @@
           <div style="background-image: url('/images/<%= movie.images %>');">
             <div class="overlay">
               <a href="/schedules-movie/<%= movie.movie_id %>?selectedCity=<%=cityFilter%>&selectedDate=<%=dateFilter%>"
-                class="font-semibold ">
+                class="text-2xl font-semibold ">
                 <%= movie.title %>
               </a>
             </div>
@@ -75,16 +79,25 @@
   </section>
 
   <section id="movieDetail" class="bg-black py-16 text-[#cfab7a] ">
-    <h1 class="flex justify-center mb-16 text-4xl font-semibold">
-      <%= movie.title %>
-    </h1>
-    <!--Movie Selected Info-->
-    <div class="flex justify-center">
-      <iframe class="flex justify-center mb-4" width="560" height="315"
-        src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
-    </div>
+    <div class="container mx-auto space-y-4">
+      <h1 class="text-4xl font-semibold text-left">
+        <%= movie.title %>
+      </h1>
+      <div class="space-y-1 text-xl text-left">
+          <%= movie.rating %> | <%= movie.genre %>
+      </div>
+      <!--Movie Selected Info-->
+      <div class="flex justify-center">
+        <iframe class="flex justify-center mb-4" width="560" height="315"
+          src="https://www.youtube.com/embed/<%= movieVideo %>?controls=0" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </div>
+      <div class="text-left">
+        <p>
+          <%= movie.synopsis %>
+        </p>
+      </div>
   </section>
 
   <% const today=new Date(); today.setHours(today.getHours() + 0); today.setDate(today.getDate()+0); const now=new
@@ -92,66 +105,80 @@
     minutes=String(now.getUTCMinutes()).padStart(2, '0' ); const timeString=hours + ':' + minutes;
     console.log(timeString); %>
 
-    <section id="schedule" class="text-left bg-black py-16 text-[#cfab7a] ">
-      <% if (schedules !=null ) { %>
-        <% if (schedules.length> 0) { %>
-          <% let scheduleByLocation={}; %>
-            <% schedules.forEach(schedule=> {
-              if (!scheduleByLocation[schedule.name]) {
-              scheduleByLocation[schedule.name] = [];
-              }
-              scheduleByLocation[schedule.name].push(schedule);
-              }); %>
-              <% Object.keys(scheduleByLocation).forEach(name=> { %>
-                <h2>
-                  <%= name %>
-                </h2>
-                <ul>
-                  <% scheduleByLocation[name].forEach(schedule=> { %>
-                    <%if((timeString> schedule.hours) && (today.toLocaleDateString('en-GB') >=
-                      schedule.date.toLocaleDateString('en-GB')) ){%>
-                      <% if(session !=null) {%>
-                        <a href="/seat/<%= schedule.schedule_id %>"
-                          class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded pointer-events-none hover:bg-blue-600">
-                          <%= schedule.hours %>
-                            <%= schedule.type %>
-                        </a>
-                        <% }else{ %>
-                          <a onclick="showPopup()"
-                            class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded pointer-events-none hover:bg-blue-600">
-                            <%= schedule.hours %>
-                              <%= schedule.type %>
-                          </a>
-                          <% }%>
-                            <%}else{%>
-                              <% if(session !=null) {%>
-                                <a href="/seat/<%= schedule.schedule_id %>"
-                                  class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
-                                  <%= schedule.hours %>
-                                    <%= schedule.type %>
-                                </a>
-                                <% }else{ %>
-                                  <a onclick="showPopup()"
-                                    class="inline-block px-4 py-2 font-semibold text-white bg-blue-500 rounded hover:bg-blue-600">
-                                    <%= schedule.hours %>
-                                      <%= schedule.type %>
-                                  </a>
-                                  <% }%>
-                                    <%} %>
-                                      <% }); %>
-                </ul>
-                <% }); %>
-                  <% } else { %>
-                    <p>No schedules available for this movie.</p>
-                    <% } %>
-                      <% } %>
+    <section id="schedule" class="bg-black py-16 text-[#cfab7a] ">
+      <div class="container flex mx-auto space-x-4">
+        <div class="w-1/2 pr-8">
+          <% if (schedules !=null ) { %>
+            <% if (schedules.length> 0) { %>
+              <% let scheduleByLocation={}; %>
+                <% schedules.forEach(schedule=> {
+                  if (!scheduleByLocation[schedule.name]) {
+                  scheduleByLocation[schedule.name] = [];
+                  }
+                  scheduleByLocation[schedule.name].push(schedule);
+                  }); %>
+                  <% Object.keys(scheduleByLocation).forEach(name=> { %>
+                    <hr class="my-4 border-cfab7a"> <!-- Here's the horizontal line -->
+                    <h2 class="flex items-center mb-4 text-2xl">
+                      <img src="/images/locationSym.png" alt="Location Icon" class="w-6 h-6">
+                      <span class="ml-2">
+                        <%= name %>
+                      </span>
+                    </h2>
+                    <ul class="pl-0 mb-8 list-none">
+                      <% scheduleByLocation[name].forEach(schedule=> { %>
+                        <% if((timeString> schedule.hours) && (today.toLocaleDateString('en-GB') >=
+                          schedule.date.toLocaleDateString('en-GB')) ){ %>
+                          <% if(session !=null) {%>
+                            <a href="/seat/<%= schedule.schedule_id %>"
+                              class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded pointer-events-none dead-btn">
+                              <%= schedule.hours %>
+                                <%= schedule.type %>
+                            </a>
+                            <% }else{ %>
+                              <a onclick="showPopup()"
+                                class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded pointer-events-none dead-btn">
+                                <%= schedule.hours %>
+                                  <%= schedule.type %>
+                              </a>
+                              <% } %>
+                                <% } else {%>
+                                  <% if(session !=null) {%>
+                                    <a href="/seat/<%= schedule.schedule_id %>"
+                                      class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded cursor-pointer custom-btn hover:custom-btn">
+                                      <%= schedule.hours %>
+                                        <%= schedule.type %>
+                                    </a>
+                                    <% }else{ %>
+                                      <a onclick="showPopup()"
+                                        class="inline-block px-4 py-2 mb-2 font-semibold text-black rounded cursor-pointer custom-btn hover:custom-btn">
+                                        <%= schedule.hours %>
+                                          <%= schedule.type %>
+                                      </a>
+                                      <% } %>
+                                        <% } %>
+                                          <% }); %>
+                    </ul>
+                    <% }); %>
+                      <% } else { %>
+                        <p>No schedules available for this movie.</p>
+                        <% } %>
+                          <% } %>
+        </div>
+        <div class="flex items-center justify-center w-1/2">
+          <img src="/images/<%= movie.images %>" alt="<%= movie.title %>" class="w-1/2">
+        </div>
+      </div>
     </section>
 
+
     <div id="popup" class="popup">
-      <h2>This is a pop-up!</h2>
-      <p>Please login first to buy ticket</p>
-      <button onclick="hidePopup()"
-        class="px-4 py-2 mt-4 font-semibold text-white bg-red-500 rounded hover:bg-red-600">Close</button>
+      <div class="w-full max-w-md px-8 py-6 mx-auto text-center text-black rounded-lg ">
+        <h2 class="mb-4 text-2xl font-semibold">This is a pop-up!</h2>
+        <p class="mb-6">Please login first to buy ticket</p>
+        <button onclick="hidePopup()"
+          class="px-4 py-2 font-semibold text-white bg-red-500 rounded hover:bg-red-700">Close</button>
+      </div>
     </div>
 
     <script src="/script/script.js" defer></script>
