--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -180,11 +180,11 @@ button {
     <% }) %>
   </ul>
   
-        <!-- buat transaksi WAITING, ticket. Udah ada API nya-->
+
   <button id="showPopup" onclick="bookSeats()">Open Pop-up</button>
 
-    <div id="popup" class="popup">
-        <div class="popup-content">
+    <div id="popup" >
+        <div >
             <h2>Confirmation</h2>
             <p><This is a pop-up message>.</p>
   
